--- a/locales/en.json
+++ b/locales/en.json
@@ -18,8 +18,8 @@
     "nhjr.ToolBox.debug.error":"nhjrToolBox error",
     "nhjr.ToolBox.debug.ConsoleLog":"DevTool Console.log [PRINT]",
     "nhjr.ToolBox.debug.VM":"VM",
-    "nhjr.ToolBox.debug.hatResult":"nhjrToolBox hat_result",
-    "nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox clear hat_result",
+    "nhjr.ToolBox.debug.hatResult":"nhjrToolBox hat_oldValue",
+    "nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox clear hat_oldValue",
     "nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"get all TemporaryVariable JSON",
     "nhjr.ToolBox.debug.setReturnError":"⚠⚠⚠ return error? set [BOOLEAN]","nhjr.ToolBox.debug.menu.true":"true","nhjr.ToolBox.debug.menu.false":"false",
     "nhjr.ToolBox.debug.isReturnError":"is return error",
@@ -43,8 +43,8 @@
     "nhjr.ToolBox.StringAndType.NOTequal":"[VALUE1]!=[VALUE2]",
     "nhjr.ToolBox.StringAndType.returnColor": "returnColor [VALUE]",
     "nhjr.ToolBox.StringAndType.returnForBoolean": "returnForBoolean [VALUE]",
-    "nhjr.ToolBox.StringAndType.quotedStr":"[VALUE] to \"string\"",
-    "nhjr.ToolBox.StringAndType.analysisQuotedStr":"\"string\" [VALUE] to string",
+    "nhjr.ToolBox.StringAndType.strToSTR":"[VALUE] to \"string\"",
+    "nhjr.ToolBox.StringAndType.STRtoStr":"\"string\" [VALUE] to string",
     "nhjr.ToolBox.StringAndType.Number":"Number [VALUE]",
     "nhjr.ToolBox.StringAndType.String":"String [VALUE]",
     "nhjr.ToolBox.StringAndType.repeat":"[VALUE] repeat [REPEAT]",
@@ -67,7 +67,7 @@
     "nhjr.ToolBox.list.removeDuplicateItems":"list [LIST] remove duplicate items",
     "nhjr.ToolBox.list.addItem":"list [LIST] add [VALUE]",
     "nhjr.ToolBox.list.mxxItem":"list [LIST] [M] item","nhjr.ToolBox.list.mxxItem.menu.max":"max","nhjr.ToolBox.list.mxxItem.menu.min":"min",
-    "nhjr.ToolBox.list.sort":"[LIST] . [M] ()","nhjr.ToolBox.list.sort.menu.sort":"sort","nhjr.ToolBox.list.sort.menu.reverse":"reverse",
+    "nhjr.ToolBox.list.sort":"[LIST] . [M] ([FUN])","nhjr.ToolBox.list.sort.menu.sort":"sort","nhjr.ToolBox.list.sort.menu.reverse":"reverse","nhjr.ToolBox.list.sort.fun.menu.null":"","nhjr.ToolBox.list.sort.fun.menu.up":"up","nhjr.ToolBox.list.sort.fun.menu.down":"down",
     "nhjr.ToolBox.list.join":"[LIST] .join ( [VALUE] )",
 
 
