--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -1,94 +1,96 @@
 {
-    "nhjr.ToolBox.help": "nhjrToolBox - 帮助",
-    "nhjr.ToolBox.list":"列表 (数组)",
-    "nhjr.ToolBox.TemporaryVariable":"临时变量",
-    "nhjr.ToolBox.StringAndType":"字符串与类型",
-    "nhjr.ToolBox.RegularExpression":"正则表达式",
-    "nhjr.ToolBox.ConvenientModules":"便利积木",
-    "nhjr.ToolBox.debug":"调试选项 - nhjrToolBox",
+"nhjr.ToolBox.help": "nhjrToolBox - 帮助",
+"nhjr.ToolBox.list":"列表 (数组)",
+"nhjr.ToolBox.TemporaryVariable":"临时变量",
+"nhjr.ToolBox.StringAndType":"字符串与类型",
+"nhjr.ToolBox.RegularExpression":"正则表达式",
+"nhjr.ToolBox.ConvenientModules":"便利积木",
+"nhjr.ToolBox.debug":"调试选项 - nhjrToolBox",
 
-    "nhjr.ToolBox.help.github": "前往 github 仓库",
-    "nhjr.ToolBox.help.gitee": "前往 gitee 仓库",
-    "nhjr.ToolBox.help.codingclip": "前往 别针社区 作品",
+"nhjr.ToolBox.help.github": "前往 github 仓库",
+"nhjr.ToolBox.help.gitee": "前往 gitee 仓库",
+"nhjr.ToolBox.help.codingclip": "前往 别针社区 作品",
 
-    "nhjr.ToolBox.debug.error":"nhjrToolBox 报错",
-    "nhjr.ToolBox.debug.ConsoleLog":"浏览器开发者工具输出日志 [PRINT]",
-    "nhjr.ToolBox.debug.hatResult":"nhjrToolBox 帽头积木记录值",
-    "nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox 清除 帽头积木记录值",
-    "nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"获取所有临时变量的JSON",
-    "nhjr.ToolBox.debug.setReturnError":"⚠⚠⚠ 返回错误？设为 [BOOLEAN]",
-    "nhjr.ToolBox.debug.isReturnError":"会返回错误？",
-    "nhjr.ToolBox.debug.setReturnObj":"⚠⚠⚠ 返回对象？设为 [BOOLEAN]",
-    "nhjr.ToolBox.debug.isReturnObj":"会返回对象？",
-    "nhjr.ToolBox.debug.JSON.parse":"⚠⚠⚠ 字符串转对象 JSON.parse [VALUE]",
-    "nhjr.ToolBox.debug.JSON.stringify":"对象转字符串 JSON.stringify [VALUE]",
+"nhjr.ToolBox.debug.error":"nhjrToolBox 报错",
+"nhjr.ToolBox.debug.ConsoleLog":"浏览器开发者工具输出日志 [PRINT]",
+"nhjr.ToolBox.debug.hatResult":"nhjrToolBox 帽头积木记录值",
+"nhjr.ToolBox.debug.clearHatResult":"⚠⚠⚠ nhjrToolBox 清除 帽头积木记录值",
+"nhjr.ToolBox.debug.getAllTemporaryVariableJSON":"获取所有临时变量的JSON",
+"nhjr.ToolBox.debug.setReturnError":"⚠⚠⚠ 返回错误？设为 [BOOLEAN]",
+"nhjr.ToolBox.debug.isReturnError":"会返回错误？",
+"nhjr.ToolBox.debug.setReturnObj":"⚠⚠⚠ 返回对象？设为 [BOOLEAN]",
+"nhjr.ToolBox.debug.isReturnObj":"会返回对象？",
+"nhjr.ToolBox.debug.JSON.parse":"⚠⚠⚠ 字符串转对象 JSON.parse [VALUE]",
+"nhjr.ToolBox.debug.JSON.stringify":"对象转字符串 JSON.stringify [VALUE]",
 
-    "nhjr.ToolBox.JSON.readValueFromKey":"JSON [JSON] 从键[KEY]读值",
-    "nhjr.ToolBox.JSON.readKeys":"JSON [JSON] 读取 [MENU]", "nhjr.ToolBox.JSON.readKeys.menu.keys":"所有键", "nhjr.ToolBox.JSON.readKeys.menu.values":"所有值", "nhjr.ToolBox.JSON.readKeys.menu.entries":"所有键值的二维列表",
-    "nhjr.ToolBox.JSON.containsKey":"JSON [JSON] 包含 [KEY] 键",
-    "nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] 设置值为 [VALUE]",
-    "nhjr.ToolBox.JSON.keyRename":"JSON [JSON] 键 [KEY] 重命名为 [NEWKEY]",
-    "nhjr.ToolBox.JSON.delKey":"JSON [JSON] 删除键 [KEY]",
+"nhjr.ToolBox.JSON.readValueFromKey":"JSON [JSON] 从键[KEY]读值",
+"nhjr.ToolBox.JSON.readKeys":"JSON [JSON] 读取 [MENU]", "nhjr.ToolBox.JSON.readKeys.menu.keys":"所有键", "nhjr.ToolBox.JSON.readKeys.menu.values":"所有值", "nhjr.ToolBox.JSON.readKeys.menu.entries":"所有键值的二维列表",
+"nhjr.ToolBox.JSON.containsKey":"JSON [JSON] 包含 [KEY] 键",
+"nhjr.ToolBox.JSON.setValue":"JSON [JSON] [KEY] 设置值为 [VALUE]",
+"nhjr.ToolBox.JSON.keyRename":"JSON [JSON] 键 [KEY] 重命名为 [NEWKEY]",
+"nhjr.ToolBox.JSON.delKey":"JSON [JSON] 删除键 [KEY]",
 
-    "nhjr.ToolBox.StringAndType.return": "返回 [VALUE]",
-    "nhjr.ToolBox.StringAndType.typeof": "获取输入类型 [VALUE]",
-    "nhjr.ToolBox.StringAndType.istrue": "[VALUE] 成立",
-    "nhjr.ToolBox.StringAndType.returnColor": "返回颜色 [VALUE]",
-    "nhjr.ToolBox.StringAndType.returnForBoolean": "返回给布尔值 [VALUE]",
-    "nhjr.ToolBox.StringAndType.strToSTR":"[VALUE] 转成 \"字符串\"",
-    "nhjr.ToolBox.StringAndType.STRtoStr":"\"字符串\" [VALUE] 转成 字符串",
-    "nhjr.ToolBox.StringAndType.Number":"转为数 [VALUE]",
-    "nhjr.ToolBox.StringAndType.String":"转为字符串 [VALUE]",
-    "nhjr.ToolBox.StringAndType.repeat":"[VALUE] 重复 [REPEAT] 次",
-    "nhjr.ToolBox.StringAndType.slice":"[VALUE] slice截取( [NUMBER1] , [NUMBER2] )",
-    "nhjr.ToolBox.StringAndType.DecimalToHex":"10进制转16进制 [VALUE] ,0x? [ADD0X]",
-    "nhjr.ToolBox.StringAndType.HEXToDecimal":"16进制转10进制 [VALUE]",
-    "nhjr.ToolBox.StringAndType.NumberToString":"数[VALUE]转为[TOSTRING]进制",
-    "nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] 删除开头结尾空白符",
-    "nhjr.ToolBox.StringAndType.TextToURL":"文字转链接 [CODE] [VALUE]",
-    "nhjr.ToolBox.StringAndType.URLToText":"链接转文字 [CODE] [VALUE]",
-    "nhjr.ToolBox.StringAndType.charCodeAt":"[VALUE]第[NUMBER]个字符的编码",
-    "nhjr.ToolBox.StringAndType.fromCharCode":"编码为[VALUE]的字符",
+"nhjr.ToolBox.StringAndType.return": "返回 [VALUE]",
+"nhjr.ToolBox.StringAndType.typeof": "获取输入类型 [VALUE]",
+"nhjr.ToolBox.StringAndType.istrue": "[VALUE] 成立",
+"nhjr.ToolBox.StringAndType.returnColor": "返回颜色 [VALUE]",
+"nhjr.ToolBox.StringAndType.returnForBoolean": "返回给布尔值 [VALUE]",
+"nhjr.ToolBox.StringAndType.strToSTR":"[VALUE] 转成 \"字符串\"",
+"nhjr.ToolBox.StringAndType.STRtoStr":"\"字符串\" [VALUE] 转成 字符串",
+"nhjr.ToolBox.StringAndType.Number":"转为数 [VALUE]",
+"nhjr.ToolBox.StringAndType.String":"转为字符串 [VALUE]",
+"nhjr.ToolBox.StringAndType.repeat":"[VALUE] 重复 [REPEAT] 次",
+"nhjr.ToolBox.StringAndType.slice":"[VALUE] slice截取( [NUMBER1] , [NUMBER2] )",
+"nhjr.ToolBox.StringAndType.DecimalToHex":"10进制转16进制 [VALUE] ,0x? [ADD0X]",
+"nhjr.ToolBox.StringAndType.HEXToDecimal":"16进制转10进制 [VALUE]",
+"nhjr.ToolBox.StringAndType.NumberToString":"数[VALUE]转为[TOSTRING]进制",
+"nhjr.ToolBox.StringAndType.RemoveBeginEndingWhiteSpace":"[VALUE] 删除开头结尾空白符",
+"nhjr.ToolBox.StringAndType.TextToURL":"文字转链接 [CODE] [VALUE]",
+"nhjr.ToolBox.StringAndType.URLToText":"链接转文字 [CODE] [VALUE]",
+"nhjr.ToolBox.StringAndType.charCodeAt":"[VALUE]第[NUMBER]个字符的编码",
+"nhjr.ToolBox.StringAndType.fromCharCode":"编码为[VALUE]的字符",
 
-    "nhjr.ToolBox.list.itemN":"列表 [LIST] 的第 [N] 项的内容",
-    "nhjr.ToolBox.list.slice":"列表 [LIST] slice截取( [NUMBER1] , [NUMBER2] )",
-    "nhjr.ToolBox.list.length":"列表 [LIST] 的长度",
-    "nhjr.ToolBox.list.indexOf":"列表 [LIST] 的第一个 [INDEXOF]",
-    "nhjr.ToolBox.list.includes":"列表 [LIST] 包含 [VALUE]",
-    "nhjr.ToolBox.list.setN":"列表 [LIST] 第 [N] 项设为 [VALUE]",
-    "nhjr.ToolBox.list.removeDuplicateItems":"列表 [LIST] 去除重复项",
-    "nhjr.ToolBox.list.addItem":"列表 [LIST] 加入 [VALUE]",
-    "nhjr.ToolBox.list.mxxItem":"列表 [LIST] 的 [M] 项","nhjr.ToolBox.list.mxxItem.menu.max":"最大","nhjr.ToolBox.list.mxxItem.menu.min":"最小",
-    "nhjr.ToolBox.list.sort":"[LIST] .排序 ([FUN])","nhjr.ToolBox.list.sort.fun.menu.null":"","nhjr.ToolBox.list.sort.fun.menu.up":"升序","nhjr.ToolBox.list.sort.fun.menu.down":"降序",
-    "nhjr.ToolBox.list.reverse":"[LIST]倒序",
-    "nhjr.ToolBox.list.join":"[LIST]使用 [VALUE] 合并为字符串",
+"nhjr.ToolBox.list.itemN":"列表 [LIST] 的第 [N] 项的内容",
+"nhjr.ToolBox.list.slice":"列表 [LIST] slice截取( [NUMBER1] , [NUMBER2] )",
+"nhjr.ToolBox.list.length":"列表 [LIST] 的长度",
+"nhjr.ToolBox.list.indexOf":"列表 [LIST] 的第一个 [INDEXOF]",
+"nhjr.ToolBox.list.lastIndexOf":"列表 [LIST] 的最后一个 [INDEXOF]",
+"nhjr.ToolBox.list.includes":"列表 [LIST] 包含 [VALUE]",
+"nhjr.ToolBox.list.setN":"列表 [LIST] 第 [N] 项设为 [VALUE]",
+"nhjr.ToolBox.list.removeDuplicateItems":"列表 [LIST] 去除重复项",
+"nhjr.ToolBox.list.addItem":"列表 [LIST] 加入 [VALUE]",
+"nhjr.ToolBox.list.mxxItem":"列表 [LIST] 的 [M] 项","nhjr.ToolBox.list.mxxItem.menu.max":"最大","nhjr.ToolBox.list.mxxItem.menu.min":"最小",
+"nhjr.ToolBox.list.sort":"[LIST] .排序 ([FUN])","nhjr.ToolBox.list.sort.fun.menu.null":"","nhjr.ToolBox.list.sort.fun.menu.up":"升序","nhjr.ToolBox.list.sort.fun.menu.down":"降序",
+"nhjr.ToolBox.list.reverse":"[LIST]倒序",
+"nhjr.ToolBox.list.flat":"[LIST]扁平化[NUM]层",
+"nhjr.ToolBox.list.join":"[LIST]使用 [VALUE] 合并为字符串",
 
 
-    "nhjr.ToolBox.ConvenientModules.hatWhenBecomeTrue":"当 [CONDITION] 变成立",
-    "nhjr.ToolBox.ConvenientModules.hatWhenChange":"当 [CONDITION] 变了",
-    "nhjr.ToolBox.ConvenientModules.NeverGonnaGiveYouStart":"永远不会给你触发",
-    "nhjr.ToolBox.ConvenientModules.NeverGonnaLetYouStop":"永远不会让你停下",
-    "nhjr.ToolBox.ConvenientModules.hatWhenIsTrue":"当 [CONDITION] 成立",
-    "nhjr.ToolBox.ConvenientModules.ifElseReturn":"如果 [CONDITION] 返回 [VALUE1] 否则返回 [VALUE2]",
-    "nhjr.ToolBox.ConvenientModules.writeClipboard":"写入剪贴板 [TEXT]",
-    "nhjr.ToolBox.ConvenientModules.isStage.menu.true":"背景 (true)","nhjr.ToolBox.ConvenientModules.isStage.menu.false":"角色 (false)",
-    "nhjr.ToolBox.ConvenientModules.getScratchList":"获取 [ISSTAGE] [SPRITE] 列表 [NAME]",
-    "nhjr.ToolBox.ConvenientModules.saveListToScratch":"设置 [ISSTAGE] [SPRITE] 列表 [NAME] 为 [LIST]",
-    "nhjr.ToolBox.ConvenientModules.getScratchVariable":"获取 [ISSTAGE] [SPRITE] 变量 [NAME]",
-    "nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"设置 [ISSTAGE] [SPRITE] 变量 [NAME] 为 [VALUE]",
-    "nhjr.ToolBox.ConvenientModules.spriteName":"角色名称",
-    "nhjr.ToolBox.ConvenientModules.isStage":"该角色是背景",
+"nhjr.ToolBox.ConvenientModules.hatWhenBecomeTrue":"当 [CONDITION] 变成立",
+"nhjr.ToolBox.ConvenientModules.hatWhenChange":"当 [CONDITION] 变了",
+"nhjr.ToolBox.ConvenientModules.NeverGonnaGiveYouStart":"永远不会给你触发",
+"nhjr.ToolBox.ConvenientModules.NeverGonnaLetYouStop":"永远不会让你停下",
+"nhjr.ToolBox.ConvenientModules.hatWhenIsTrue":"当 [CONDITION] 成立",
+"nhjr.ToolBox.ConvenientModules.ifElseReturn":"如果 [CONDITION] 返回 [VALUE1] 否则返回 [VALUE2]",
+"nhjr.ToolBox.ConvenientModules.writeClipboard":"写入剪贴板 [TEXT]",
+"nhjr.ToolBox.ConvenientModules.isStage.menu.true":"背景 (true)","nhjr.ToolBox.ConvenientModules.isStage.menu.false":"角色 (false)",
+"nhjr.ToolBox.ConvenientModules.getScratchList":"获取 [ISSTAGE] [SPRITE] 列表 [NAME]",
+"nhjr.ToolBox.ConvenientModules.saveListToScratch":"设置 [ISSTAGE] [SPRITE] 列表 [NAME] 为 [LIST]",
+"nhjr.ToolBox.ConvenientModules.getScratchVariable":"获取 [ISSTAGE] [SPRITE] 变量 [NAME]",
+"nhjr.ToolBox.ConvenientModules.saveVariableToScratch":"设置 [ISSTAGE] [SPRITE] 变量 [NAME] 为 [VALUE]",
+"nhjr.ToolBox.ConvenientModules.spriteName":"角色名称",
+"nhjr.ToolBox.ConvenientModules.isStage":"该角色是背景",
 
-    "nhjr.ToolBox.TemporaryVariable.clearAllVariable":"清除所有临时变量",
-    "nhjr.ToolBox.TemporaryVariable.setItoValue":"设置临时变量 [NAME] 为 [VALUE]",
-    "nhjr.ToolBox.TemporaryVariable.getVariable":"获取临时变量的值 [NAME]",
-    "nhjr.ToolBox.TemporaryVariable.deleteVariable":"删除临时变量 [NAME]",
-    "nhjr.ToolBox.TemporaryVariable.VariableExist":"[NAME] 临时变量已存在？",
+"nhjr.ToolBox.TemporaryVariable.clearAllVariable":"清除所有临时变量",
+"nhjr.ToolBox.TemporaryVariable.setItoValue":"设置临时变量 [NAME] 为 [VALUE]",
+"nhjr.ToolBox.TemporaryVariable.getVariable":"获取临时变量的值 [NAME]",
+"nhjr.ToolBox.TemporaryVariable.deleteVariable":"删除临时变量 [NAME]",
+"nhjr.ToolBox.TemporaryVariable.VariableExist":"[NAME] 临时变量已存在？",
 
-    "nhjr.ToolBox.RegularExpression.test":"[VALUE1] .测试( [VALUE2] )",
-    "nhjr.ToolBox.RegularExpression.exec":"[VALUE1] .执行( [VALUE2] )",
-    "nhjr.ToolBox.RegularExpression.search":"[VALUE1] .搜索( [VALUE2] )",
-    "nhjr.ToolBox.RegularExpression.match":"[VALUE1] .[MENU] ( [VALUE2] )","nhjr.ToolBox.RegularExpression.match.menu.match":"查找符合的内容","nhjr.ToolBox.RegularExpression.match.menu.begin":"内容开头","nhjr.ToolBox.RegularExpression.match.menu.ending":"内容结尾","nhjr.ToolBox.RegularExpression.match.menu.matchANDbeginANDending":"符合的内容, 开头, 结尾","nhjr.ToolBox.RegularExpression.match.menu.beginANDending":"开头, 结尾",
-    "nhjr.ToolBox.RegularExpression.replace":"[VALUE1] .替换( [VALUE2] , [VALUE3])",
-    "nhjr.ToolBox.RegularExpression.split":"[VALUE1]使用[VALUE2]分割为列表"
+"nhjr.ToolBox.RegularExpression.test":"[VALUE1] .测试( [VALUE2] )",
+"nhjr.ToolBox.RegularExpression.exec":"[VALUE1] .执行( [VALUE2] )",
+"nhjr.ToolBox.RegularExpression.search":"[VALUE1] .搜索( [VALUE2] )",
+"nhjr.ToolBox.RegularExpression.match":"[VALUE1] .[MENU] ( [VALUE2] )","nhjr.ToolBox.RegularExpression.match.menu.match":"查找符合的内容","nhjr.ToolBox.RegularExpression.match.menu.begin":"内容开头","nhjr.ToolBox.RegularExpression.match.menu.ending":"内容结尾","nhjr.ToolBox.RegularExpression.match.menu.matchANDbeginANDending":"符合的内容, 开头, 结尾","nhjr.ToolBox.RegularExpression.match.menu.beginANDending":"开头, 结尾",
+"nhjr.ToolBox.RegularExpression.replace":"[VALUE1] .替换( [VALUE2] , [VALUE3])",
+"nhjr.ToolBox.RegularExpression.split":"[VALUE1]使用[VALUE2]分割为列表"
 }
